# kraken-rs

./: .dockerignore  .gitignore  Cargo.toml  DEMO_SCRIPT.md  DOMAIN_STUDY_GUIDE.md  Dockerfile  INTERVIEW_PREP.md  LICENSE  README.md  RUST_STUDY_PLAN.md  STRATEGY.md  SUBMISSION.md  SUBMISSION_DETAILS.md  TEST_REPORT.md  VIDEO_SCRIPT.md  docker-compose.yml  run_all_examples.sh
.github/workflows/: ci.yml
docs/: crates.js  help.html  index.html  settings.html  src-files.js
docs/kraken_sdk/: all.html  enum.Command.html  index.html  sidebar-items.js  struct.KrakenClient.html  struct.SubscriptionArgs.html
docs/search.index/: 02556a3684ad.js  080ac65f87eb.js  0afe200421fc.js  0cdf0a0437b4.js  12851066f2df.js  1326edd44ac9.js  133cfda1d012.js  1757147fbcb7.js  18ea2f3414f9.js  20f244a0c777.js  217655abd1a4.js  2260bf66a4c1.js  26a80f3747d7.js  280365c835f0.js  2c0a0e554657.js  2dfe3dd00cd6.js  359ef2645d16.js  3b9afa84048a.js  45e52fa098a5.js  4839174b668e.js  522d3084b512.js  52767d7c0211.js  58e292fd765d.js  60eabf686b0b.js  60f9571ab01c.js  64b3d44d35f4.js  65898854b6db.js  66d728e946f4.js  672d143fb6d9.js  6f17cc3d6957.js  6fa0f648dc61.js  7301fdbf6b5a.js  769bd8f223be.js  7a59af512c18.js  7a81fe26f655.js  (+4 more)
examples/: 01_basic_subscribe.rs  02_orderbook_tracker.rs  03_trade_monitor.rs  04_multi_pair.rs  05_custom_handler.rs  06_reconnect_demo.rs  07_terminal_ui.rs  08_ohlc_candles.rs  09_private_feed.rs  10_simple_bot.rs  benchmark.py  benchmark.rs  benchmark_data.json  generate_data.py
src/: aggregator.rs  auth.rs  lib.rs  main.rs  models.rs
tests/: auth_test.rs
(+58 files in other folders)
