[package]
name = "kraken_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
dotenvy = "0.15"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
url = "2.4"
tracing = "0.1"
tracing-subscriber = "0.3"
crc32fast = "1.5.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
